# flint

./: .gitignore  Cargo.toml  README.md  flake.nix  go.mod  go.sum  main.go
.github/workflows/: codecov.yml  go.yml  release.yml
cmd/: root.go
internal/args/: main.go
internal/flake/: flake_test.go  types.go  updates.go  updates_test.go  util.go
internal/output/: output.go  output_test.go
internal/util/: util.go  util_test.go
nix/: package.nix  shell.nix
src/: analyze.rs  lock.rs  main.rs  output.rs  updates.rs
test/fixtures/with-nonflake/: flake.nix
